cmake_minimum_required(VERSION 3.21)
project(tp_poo)

set(CMAKE_CXX_STANDARD 14)

add_executable(tp_poo main.cpp Coelho.h functions.cpp functions.h Coelho.cpp Ovelha.cpp Ovelha.h Lobo.cpp Lobo.h Canguru.cpp Canguru.h Animal.h Animal.cpp Alimento.cpp Alimento.h Relva.cpp Relva.h Cenoura.cpp Cenoura.h)
